--- a/css/form.css
+++ b/css/form.css
@@ -9,8 +9,8 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Fira Sans", Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    /* -webkit-font-smoothing: antialiased; */
+    /* -moz-osx-font-smoothing: grayscale; */
 }
 
 .form-structor {
@@ -158,7 +158,7 @@ body {
 }
 
 /* ---------- FORM ĐĂNG NHẬP ---------- */
-.login {
+.signin {
     position: absolute;
     top: 20%;
     left: 0;
@@ -169,7 +169,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.login::before {
+.signin::before {
     content: "";
     position: absolute;
     left: 50%;
@@ -183,7 +183,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.login .center {
+.signin .center {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -193,20 +193,20 @@ body {
     transition: all 0.3s ease;
 }
 
-.login .form-title {
+.signin .form-title {
     color: #000;
     font-size: 1.7em;
     text-align: center;
 }
 
-.login .form-title span {
+.signin .form-title span {
     color: rgba(0, 0, 0, 0.6);
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s ease;
 }
 
-.login .form-holder {
+.signin .form-holder {
     border-radius: 15px;
     background-color: #fff;
     border: 1px solid #eee;
@@ -217,7 +217,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.login .input {
+.signin .input {
     border: none;
     outline: none;
     display: block;
@@ -229,11 +229,11 @@ body {
     font-size: 12px;
 }
 
-.login .input:last-child {
+.signin .input:last-child {
     border-bottom: none;
 }
 
-.login .input::placeholder {
+.signin .input::placeholder {
     color: rgba(0, 0, 0, 0.6);
 }
 
@@ -252,7 +252,7 @@ body {
     text-decoration: underline;
 }
 
-.login .submit-btn {
+.signin .submit-btn {
     background-color: #A79277;
     color: #fff;
     border: none;
@@ -267,51 +267,51 @@ body {
     transition: all 0.3s ease;
 }
 
-.login .submit-btn:hover {
+.signin .submit-btn:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-.login.slide-up {
+.signin.slide-up {
     top: 90%;
 }
 
-.login.slide-up .center {
+.signin.slide-up .center {
     top: 10%;
     transform: translate(-50%, 0);
 }
 
-.login.slide-up .form-holder,
-.login.slide-up .submit-btn {
+.signin.slide-up .form-holder,
+.signin.slide-up .submit-btn {
     opacity: 0;
     visibility: hidden;
 }
 
-.login.slide-up .form-title {
+.signin.slide-up .form-title {
     font-size: 1em;
     margin: 0;
     cursor: pointer;
 }
 
-.login.slide-up .form-title span {
+.signin.slide-up .form-title span {
     margin-right: 5px;
     opacity: 1;
     visibility: visible;
 }
 
-.login .switch-text {
+.signin .switch-text {
     color: rgba(0, 0, 0, 0.7);
 }
 
-.login .switch-text .switch-btn {
+.signin .switch-text .switch-btn {
     color: #74512D;
 }
 
-.login .switch-text .switch-btn:hover {
+.signin .switch-text .switch-btn:hover {
     color: #A79277;
 }
 
 /* ---------- TOAST THÔNG BÁO ---------- */
-.toast {
+/* .toast {
     position: fixed;
     top: 30px;
     right: 30px;
@@ -337,4 +337,4 @@ body {
 
 .toast.error {
     background-color: #dc3545;
-}
+} */
