--- a/css/newPass.css
+++ b/css/newPass.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
     justify-content: center;
     font-family: "Fira Sans", sans-serif;
-    -webkit-font-smoothing: antialiased;
+    /* -webkit-font-smoothing: antialiased; */
 }
 
 .form-structor {
@@ -41,7 +41,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 75%;
+    width: 65%;
     background: #fff;
     border-radius: 15px;
     padding: 40px 30px;
@@ -116,7 +116,7 @@ body {
 }
 
 /* Toast */
-.toast {
+/* .toast {
     position: fixed;
     top: 20px;
     right: 20px;
@@ -141,4 +141,4 @@ body {
 
 .toast.error {
     background-color: #E74C3C;
-}
+} */
