--- a/css/changePass.css
+++ b/css/changePass.css
@@ -1,4 +1,3 @@
-
 .form {
     background-color: #fff;
     padding: 40px 45px;
@@ -11,22 +10,27 @@
 
 /* ===== TITLE ===== */
 
-    body {
-        font-family: "Segoe UI", sans-serif;
-        background-color: white;
-        margin: 0;
-        color: #6F4E37;
-    }
+body {
+    font-family: "Segoe UI", sans-serif;
+    background-color: white;
+    margin: 0;
+    color: #6F4E37;
+}
 
-    .page { display: none; }
-    .page.active { display: block; }
+.page {
+    display: none;
+}
 
-    input-cp.editing {
-        border: 1px solid #A79277;
-        background: #fff;
-        padding: 4px 6px;
-        border-radius: 5px;
-    }
+.page.active {
+    display: block;
+}
+
+input-cp.editing {
+    border: 1px solid #A79277;
+    background: #fff;
+    padding: 4px 6px;
+    border-radius: 5px;
+}
 
 
 
@@ -37,7 +41,7 @@
 }
 
 
-    .form-title {
+.form-title {
     font-size: 22px;
     color: #222;
     font-weight: 600;
