--- a/css/form.css
+++ b/css/form.css
@@ -26,7 +26,7 @@ body {
     opacity: 0.8;
     position: absolute;
     inset: 0;
-    background: url("../images/bgr_login.jpg") no-repeat left bottom / 500px;
+    background: url("https://i.postimg.cc/ncBkxWWJ/bgr-login.jpg") no-repeat left bottom / 500px;
 }
 
 .switch-text {
